--- a/index.html
+++ b/index.html
@@ -1,11 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
+
+
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav>
+            <h2 class="nav-title">Gau<span class="text-primary">su</span>l</h2>
+            <ul>
+                <li>Portfolio</li>
+                <li>Blogs</li>
+                <li><button class="btn-primary">Hire Me</button></li>
+            </ul>
+
+        </nav>
+
+        <!-- Header Banner -->
+        <div class="banner">
+            <div>
+                <h3 class="banner-sub-title">Hi I am</h3>
+                <h1 class="banner-title">Md Gousul Islam Hemonto</h1>
+                <p class="banner-description"> I, m a designer & developer with a passion for web design. I enjoy
+                    developing simple, clean and slick
+                    websites that provide real value to the end user. Thousands of clients have procured exceptional
+                    results
+                    while working with me. Delivering work within time and budget which meets clients requirements in
+                    our
+                    mata.</p>
+                <button class="btn-primary">Download CV</button>
+            </div>
+            <div>
+                <img src="../Developer-portfolio/Image/03D (1).jpg" alt="">
+            </div>
+
+        </div>
+
+    </header>
+    <main>
+        <section class="About">
+            <h3 class="section-title">About Me </h3>
+            <p class="section-description"> I have more than 10 years experience building software for clients all over
+                the world. Below is a quick
+                overview of my main technical skill sets and technologies i use. Want to find out more about my
+                experience? Check out my online resume and project portfolio.</p>
+
+            <div class="About-info-container">
+                <div class="About-info">
+                    <p class="info-title">Name:</p>
+                    <p class="info-description">Md Gousul Islam</p>
+                </div>
+                <div class="About-info">
+                    <p class="info-title">Email:</p>
+                    <p class="info-description">gausulislam5@gmail.com</p>
+                </div>
+                <div class="About-info">
+                    <p class="info-title">Date of birth</p>
+                    <p class="info-description">07-01-2000</p>
+                </div>
+                <div class="About-info">
+                    <p class="info-title">Form</p>
+                    <p class="info-description"> Patuakhali</p>
+                </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
