--- a/index.html
+++ b/index.html
@@ -31,13 +31,8 @@
             <div>
                 <h3 class="banner-sub-title">Hi I am</h3>
                 <h1 class="banner-title">Md Gousul Islam Hemonto</h1>
-                <p class="banner-description"> I, m a designer & developer with a passion for web design. I enjoy
-                    developing simple, clean and slick
-                    websites that provide real value to the end user. Thousands of clients have procured exceptional
-                    results
-                    while working with me. Delivering work within time and budget which meets clients requirements in
-                    our
-                    mata.</p>
+                <p class="banner-description"> Shot what able cold new see hold.Friendly as an betrayed formerly he.
+                    Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
             </div>
             <div>
@@ -50,10 +45,11 @@
     <main>
         <section class="About">
             <h3 class="section-title">About Me </h3>
-            <p class="section-description"> I have more than 10 years experience building software for clients all over
-                the world. Below is a quick
-                overview of my main technical skill sets and technologies i use. Want to find out more about my
-                experience? Check out my online resume and project portfolio.</p>
+            <p class="section-description"> I, m a designer & developer with a passion for web design. I enjoy
+                developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.</p>
 
             <div class="About-info-container">
                 <div class="About-info">
@@ -72,6 +68,104 @@
                     <p class="info-title">Form</p>
                     <p class="info-description"> Patuakhali</p>
                 </div>
+            </div>
+        </section>
+        <!-- What i do section -->
+
+        <section class="About">
+            <h3 class="section-title">What I DO </h3>
+            <p class="section-description">    I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick
+                websites that provide real value to the end user. Thousands of clients have procured exceptional results
+                while working with me. Delivering work within time and budget which meets clients requirements in our
+                mata.</p>
+
+            <div class="skills-container">
+                <div class="skills">
+                    <img src="../Developer-portfolio/Icons/icons8-html-48.png" alt="">
+                    <p class="skills-title">HTML</p>
+                    <p class="skills-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sit tenetur, cumque pariatur aut reprehenderit amet perspiciatis autem sint ad deserunt?</p>
+
+                </div>
+                <div class="skills">
+                    <img src="../Developer-portfolio/Icons/icons8-css-48.png" alt="">
+                    <p class="skills-title">CSS</p>
+                    <p class="skills-description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam, hic error. Atque accusantium distinctio repellat ab consequuntur ipsum quo error?</p>
+                </div>
+                <div class="skills">
+                    <img src="../Developer-portfolio/Icons/js.png" alt="">
+                    <p class="skills-title">Vanila Javascript</p>
+                    <p class="skills-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga repellat neque iste officiis iusto provident eum quos voluptatem inventore commodi.</p>
+                </div>
+                <div class="skills">
+                    <img src="../Developer-portfolio/Icons/react.png" alt="">
+                    <p class="skills-title">React JS</p>
+                    <p class="skills-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro nobis quam libero iure qui explicabo ducimus sed placeat modi odit?</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Resume section start -->
+        <section class="resume">
+            <h3 class="section-title">A summary of My Resume</h3>
+
+            <div class="resume-content">
+
+
+                <div>
+
+                <h3 class="resume-title">My Education</h3>
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+               
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+
+            <div>
+                <h3 class="resume-title">My Experience</h3>
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <hr>
+                <div class="resume-item">
+                    <h4 class="title"> Master in Computer Engineering </h4>
+                    <h5 class="sub-title">Harvard University / 2015 - 2017</h5>
+                    <p class="description">List skill/technologies here. You can change the icon above
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+               </div>
+                
+            </div>
+
+            <div class="resume-btn">
+                <button class="btn-primary">Download CV</button>
             </div>
         </section>
 
