--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary">Download CV</button>
             </div>
-            <div>
-                <img src="../Developer-portfolio/Image/03D (1).jpg" alt="">
+            <div class="banner-pic">
+                <img src="../Developer-portfolio/Image/Md Gousul Islam Hemonto.jpg" alt="">
             </div>
 
         </div>
