--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <p class="banner-description"> Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
                 <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
+                <button class="btn-primary2"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <div class="banner-pic">
                 <img src="../Developer-portfolio/Image/Md Gousul Islam Hemonto.jpg" alt="">
